<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PVR CINEMAS</string>
    <string name="blank_space"> </string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subHeader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint"> </string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">cheezycode@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account?</string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subHeader">Login to access your notes</string>
    <string name="txt_login">Login</string>
    <string name="checkNumber">Invalid mobile number</string>
    <string name="enterMobileNo">Phone number is required</string>
    <string name="exitApp">Are You Sure You want to exit?</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="network_error">Network Error</string>
    <string name="connection_error">Your connection to the internet was lost.\n Please connect and try again</string>
    <string name="settings">Settings</string>
    <string name="try_again">Try Again</string>
    <string name="slider_twoTxt">Seamless\nTicket Booking</string>
    <string name="onBoarding_three_txt"><![CDATA[Effortless Food &\nBeverage choices]]></string>
    <string name="onBoarding_three_four">Limitless movie watching\nexperiences!</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_start">Get Started</string>
    <string name="verify_number">Verify\nPhone Number</string>
    <string name="toContinue">to continue, enter your phone number</string>
    <string name="mobile_number">Phone Number</string>
    <string name="continue_txt">Continue</string>
    <string name="verify_code">Verify\nOTP Code</string>
    <string name="sentCode">We’ve sent a code to your phone number</string>
    <string name="invalidPhone">You Enter Invalid Phone Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="keep_info_safe">We promise to keep your information safe</string>
    <string name="prev">Prev</string>
    <string name="onboard_txt1">Limitless movie watching\n experience!</string>
    <string name="onboard_txt2">Delicious food &amp; beverage \n choices</string>
    <string name="onboard_txt3">Seamless ticket booking \n &amp; rewards</string>
    <string name="onboard_txt4">Enroll in our Privilege\n program to earn points &amp;\n vouchers  </string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="pleaseWait">It\'s movie time!</string>
    <string name="no">No</string>
    <string name="enterOtp">Please Enter Your OTP</string>
    <string name="enterName">Your name is required</string>
    <string name="lastName">Your last name is required</string>
    <string name="enterEmail">Your email address is required</string>
    <string name="wrongEmail">You entered an invalid email address</string>
    <string name="mobileNotAvailable">No phone numbers found</string>
    <string name="home">Home</string>
    <string name="cinema">Cinemas</string>
    <string name="privilege">Privilege</string>
    <string name="comingSoon">Coming Soon</string>
    <string name="more">More</string>
    <string name="login_register">Login / Register</string>
    <string name="my_bookings">My Bookings</string>
    <string name="newTxt">New</string>
    <string name="sign_out">Log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_privacy"><![CDATA[T&C | Privacy]]></string>
    <string name="whatsapp_notifications">Whatsapp Notifications</string>
    <string name="theatre_on_demand">Theatre on Demand</string>
    <string name="movie_library">Movie Library</string>
    <string name="private_screening">Private Screening</string>
    <string name="pvr_magazine">PVR Magazine</string>
    <string name="offers">Offers</string>
    <string name="cine_value_pass">Cine Value Pass</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="scan_qr">Scan QR</string>
    <string name="merchandise">Merchandise</string>
    <string name="experience">Experiences</string>
    <string name="pvr_cares">PVR Cares</string>
    <string name="movies">Movies</string>
    <string name="alert_movie">Alert Movie</string>
    <string name="my_pvr">My PVR</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="points">Points</string>
    <string name="vouchers">Vouchers</string>
    <string name="parking">Parking</string>
    <string name="movieForYou">Movie for You</string>
    <string name="f_amp_b"><![CDATA[F & B]]></string>
    <string name="metro">Metro nearby</string>
    <string name="directions">Directions</string>
    <string name="dots">•</string>
    <string name="shows">Shows</string>
    <string name="loginCinema">Login to add Theatre to your\n Favorites?</string>
    <string name="ticket_food">Tickets &amp; Food</string>
    <string name="resend_text">Resend</string>
    <string name="order">Order : </string>
    <string name="orderId">Order ID: </string>
    <string name="view_parking">View Parking</string>
    <string name="add_food">Add Food</string>
    <string name="upcomingBooking">Upcoming Bookings: </string>
    <string name="featured_offers">Featured Offers</string>
    <string name="more_details">More Details</string>
    <string name="validTill">Valid till</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="movie">Movie</string>
    <string name="movie_type">Movie Type</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="your_requirements">Your Requirements</string>
    <string name="copy_to_self">Copy To Self</string>
    <string name="no_of_seats">No. of Seats</string>
    <string name="active_gift_cards">Active Gift Cards</string>
    <string name="generic">Generic</string>
    <string name="create_gift_card">Create Gift Card</string>
    <string name="select_city">Select City</string>
    <string name="search_city">Search City</string>
    <string name="selected_location">Selected Location:</string>
    <string name="other_cities">Other Cities</string>
    <string name="hate_to_wait">Hate to wait?</string>
    <string name="quick_book">Quick Book</string>
    <string name="trailer_amp_music"><![CDATA[Trailer & Music]]></string>
    <string name="trailers">Trailers</string>
    <string name="music">Music</string>
    <string name="book">Book</string>
    <string name="location_recommendation">If we know your location we will make better \n movie recommendations for you.</string>
    <string name="enable_location">Enable Location</string>
    <string name="battery_usage">We will keep the battery usage to minimum</string>
    <string name="recommendation">Not Now</string>
    <string name="search_hint_text">Search for a movie or cinema</string>
    <string name="cinemas">Cinemas</string>
    <string name="cancel">Cancel</string>
    <string name="book_now">Book Now</string>
    <string name="release_date">Release Date</string>
    <string name="duration">Duration</string>
    <string name="censor_rating">Censor Rating</string>
    <string name="available_in">Available in</string>
    <string name="releasing_in_9_days">Releasing in 9 Days</string>
    <string name="set_alert">Set Alert</string>
    <string name="new_txt">New</string>
    <string name="plot">Plot</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="technical_details">Technical Details</string>
    <string name="film_type">Film Type</string>
    <string name="language">Language</string>
    <string name="color_info">Color Info</string>
    <string name="sound_mix">Sound Mix</string>
    <string name="music_videos">Music Videos</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="turn_flash_on_off">Turn Flash On/Off</string>
    <string name="view_finder">View Finder</string>
    <string name="scanning_with">Scanning with</string>
    <string name="scanner_library">Scanner Library</string>
    <string name="result">Result</string>
    <string name="copy">Copy</string>
    <string name="scan_with_ml_kit">Scan with ML Kit</string>
    <string name="scan_with_zxing">Scan with ZXing</string>
    <string name="developed_by_maulik_hirani">Developed by Akash Mishra</string>
    <string name="view_more">View more</string>
    <string name="view_less">View less</string>
    <string name="also_close_to">Also close to</string>
    <string name="invalidQr">Invalid QR Code!\nTry a New one or try again</string>
    <string name="scanQr">Scan Qr code to book ticket or food</string>
    <string name="also_playing">Also playing</string>
    <string name="food_beverages">Food &amp; Beverages</string>
    <string name="seat_info">Seat Info</string>
    <string name="tickets">Tickets</string>
    <string name="explore_apply_coupons"><![CDATA[Explore & Apply Coupons]]></string>
    <string name="apply">Apply</string>
    <string name="bill_details">Bill Details</string>
    <string name="coupon">Coupon</string>
    <string name="taxes_fees"><![CDATA[Taxes & Fees]]></string>
    <string name="cauvery_calling">Cauvery Calling</string>
    <string name="grand_total">Grand Total</string>
    <string name="remove">Remove</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="quick_pay">Quick Pay</string>
    <string name="max_seat_msz">You Can\'t Select More Than two Seat.</string>
    <string name="max_seat_msz1">You can only book 10 tickets at a time.</string>
    <string name="currency">₹</string>
    <string name="bullet">\u25CF</string>
    <string name="screen_this_way">Screen</string>
    <string name="your_seats">Selected</string>
    <string name="vacant">Vacant</string>
    <string name="occupied">Occupied</string>
    <string name="disable">Wheelchair</string>
    <string name="buddy">Buddy</string>
    <string name="retry">Retry</string>
    <string name="your_session_expired_message">Your session has expired.</string>
    <string name="selected_seats">Selected Seats</string>
    <string name="account">Account</string>
    <string name="empty">---</string>
    <string name="site_name">Site Name</string>
    <string name="ticket">Ticket</string>
    <string name="please_enable_location_sharing_to_use_this_feature">Please enable location sharing to use this feature</string>
    <string name="please_select_your_booking">Please select your booking</string>
    <string name="do_you_want_to">Do you want to</string>
    <string name="end_the_session">End the Session</string>
    <string name="or">OR</string>
    <string name="explore_menu">Explore Menu</string>
    <string name="seat_arrangement">Seat Arrangement</string>
    <string name="screen_way">screen this way</string>
    <string name="evening_time_filter">5:01PM - 8:00PM</string>
    <string name="all_theatres">All Theatre</string>
</resources>