<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home_menu_selector"/>

    <item
        android:id="@+id/cinemaFragment"
        android:title="@string/cinema"
        android:icon="@drawable/cinema_menu_selector"/>

    <item
        android:id="@+id/privilegeFragment"
        android:title="@string/privilege"
        android:icon="@drawable/privilege_menu_selector"/>

    <item
        android:id="@+id/comingSoonFragment"
        android:title="@string/coming_soon"
        android:icon="@drawable/comming_soon_menu_selector"/>
    <item
        android:id="@+id/moreFragment"
        android:title="@string/account"
        android:icon="@drawable/account_menu_selector"/>

</menu>