<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/alert_dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/crossBtn"
        android:layout_width="@dimen/dimen_20dp"
        android:layout_height="@dimen/dimen_20dp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/padding_10"
        android:src="@drawable/close"
        android:visibility="visible"
        app:tint="@color/pvr_dark_black"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_15dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/helvetica_neu_medium"
        android:gravity="center"
        android:text="@string/do_you_want_to"
        android:textColor="@color/pvr_dark_gray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alert_dialog_view_height"
            android:layout_weight="1"
            android:background="@color/pvr_yellow"
            android:fontFamily="@font/helvetica_neu_medium"
            android:gravity="center"
            android:padding="@dimen/alert_dialog_padding_default"
            android:text="@string/end_the_session"
            android:textSize="@dimen/dim_h11" />

        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alert_dialog_view_height"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_neu_medium"
            android:gravity="center"
            android:padding="@dimen/alert_dialog_padding_default"
            android:text="@string/or"
            android:textColor="#4D4D4D"
            android:textSize="@dimen/dim_h10" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alert_dialog_view_height"
            android:layout_weight="1"
            android:background="@color/pvr_yellow"
            android:fontFamily="@font/helvetica_neu_medium"
            android:gravity="center"
            android:padding="@dimen/alert_dialog_padding_default"
            android:text="@string/explore_menu"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>