<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanner.bookings.SelectBookingsActivity">

    <include
        android:id="@+id/include33"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/include33">

        <TextView
            android:id="@+id/tvCinemaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/please_enable_location_sharing_to_use_this_feature"
            android:textColor="#e43333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSelect_book_dummy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/please_select_your_booking"
            android:textColor="@color/gray"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/llTicket_Food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/theater_select_gray">

            <TextView
                android:id="@+id/tvTicket_"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/ticket"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/onlyFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/food_select_gray">

            <TextView
                android:id="@+id/tvFood_"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/food_beverages"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        tools:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/include33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include33" />


</androidx.constraintlayout.widget.ConstraintLayout>