<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screenLayout"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:background="@drawable/ic_cross_pri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShareSeat"
       android:fontFamily="@font/sf_pro_text_bold"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/seat_arrangement"
        android:textColor="@color/pvr_dark_black"
        android:textSize="@dimen/dim_h6"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlMovieContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_4dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvShareSeat">

        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="@dimen/dimen_55dp"
            android:layout_height="@dimen/dimen_55dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:src="@drawable/imax" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/imgMovie"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMovieName"
                android:fontFamily="@font/sf_pro_text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:textColor="@color/pvr_dark_black"
                android:textSize="@dimen/dimen_12sp" />

            <TextView
                android:id="@+id/tvTheatre"
                android:fontFamily="@font/sf_pro_text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_theatres"
                android:textColor="@color/pvr_dark_black"
                android:textSize="@dimen/dimen_12sp" />

            <TextView
                android:id="@+id/tvTime"
                android:fontFamily="@font/sf_pro_text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening_time_filter"
                android:textColor="@color/pvr_dark_black"
                android:textSize="@dimen/dimen_12sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:background="@color/gray_"
        app:layout_constraintBottom_toBottomOf="@id/tvScreenWay"
        app:layout_constraintEnd_toStartOf="@id/tvScreenWay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvScreenWay" />

    <TextView
        android:id="@+id/tvScreenWay"
        android:fontFamily="@font/sf_pro_text_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen_4dp"
        android:text="@string/screen_way"
        android:textColor="@color/pvr_dark_black"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlMovieContent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@color/gray_"
        app:layout_constraintBottom_toBottomOf="@id/tvScreenWay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvScreenWay"
        app:layout_constraintTop_toTopOf="@id/tvScreenWay" />

    <ImageView
        android:id="@+id/ivShareImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/tvShareImg"
        app:layout_constraintTop_toBottomOf="@id/tvScreenWay" />

    <TextView
        android:id="@+id/tvShareImg"
        android:fontFamily="@font/sf_pro_text_bold"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dimen_8dp"
        android:text="Share"
        android:textColor="@color/pvr_dark_black"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>