<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.otpVerify.OtpVerifyActivity">

    <View
        android:id="@+id/view11"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11"
        app:srcCompat="@drawable/pvr_new"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pvr_dark_black"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:fontFamily="@font/helvetica_neu_medium"
        android:layout_marginTop="10dp"
        android:text="@string/verify_code"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/helvetica_neu_reg"
        android:text="@string/sentCode"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="TextContrastCheck" />


    <com.kevinschildhorn.otpview.OTPView
        android:id="@+id/otpEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:clipToPadding="true"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:otp_backgroundImage="@drawable/background"
        app:otp_filledBackgroundImage="@drawable/background"
        app:otp_highlightedBackgroundImage="@drawable/background_highlighted"
        app:otp_itemCount="6"
        app:otp_itemHeight="42dp"
        app:otp_itemWidth="42dp"
        app:otp_showCursor="false"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:drawablePadding="@dimen/dimen_5dp"
        android:textSize="@dimen/dimen_14sp"
        android:fontFamily="@font/helvetica_neu_medium"
        android:text="@string/resend_otp"
        android:textAllCaps="false"
        android:textColor="#2f2f2f"
        app:layout_constraintEnd_toEndOf="@+id/otpEditText"
        app:layout_constraintTop_toBottomOf="@+id/otpEditText"
        app:drawableEndCompat="@drawable/ic_yellow" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:fontFamily="@font/cafeta"
        android:textSize="@dimen/dimen_20sp"
        android:layout_margin="@dimen/dimen_50dp"
        android:textColor="@color/text_color_default"
        android:background="@drawable/yellow_button_selector"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />


</androidx.constraintlayout.widget.ConstraintLayout>