<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanner.ScannerActivity">

    <include
        android:id="@+id/includeHeader"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent"
        layout="@layout/toolbar" />
    <TextView
        android:visibility="gone"
        android:id="@+id/nameKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/includeHeader"
        android:paddingBottom="@dimen/padding_default"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_default"
        android:text="@string/empty"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameKey" />

    <TextView
        android:visibility="gone"
        android:id="@+id/site_name_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_default"
        android:text="@string/site_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:visibility="gone"
        android:id="@+id/site_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_default"
        android:text="@string/empty"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/site_name_key" />

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/zxing_barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeHeader"
        app:zxing_scanner_layout="@layout/custom_barcode_scanner" >

        <TextView
            android:id="@+id/switch_flashlight"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/yellow_book_curve"
            android:gravity="center"
            android:fontFamily="@font/sf_pro_text_bold"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:text="Turn off Flashlight" />
    </com.journeyapps.barcodescanner.DecoratedBarcodeView>


</androidx.constraintlayout.widget.ConstraintLayout>